--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -52,8 +52,8 @@ services:
       # - PMA_ARBITRARY=${PMA_ARBITRARY}
       - PMA_HOST=${DB_HOST}
       - PMA_PORT=${DB_PORT}
-      - PMA_USER=${DB_USERNAME}
-      - PMA_PASSWORD=${DB_PASSWORD}
+      - PMA_USER=root
+      - PMA_PASSWORD=${DB_ROOT_PASSWORD}
       - PMA_ABSOLUTE_URI=${PMA_ABSOLUTE_URI}
     ports:
       - "${PMA_PORT}:80"
