Fixing proxy file

--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -11,11 +11,11 @@ http{
         listen 80;
         server_name localhost;
 
-        location /api{
+        location /api/{
             proxy_pass http://web:80/api/;
         }
 
-        location /phpmyadmin{
+        location /phpmyadmin/{
             proxy_pass http://phpmyadmin:80/;
         }
 
