--- a/.env.example
+++ b/.env.example
@@ -18,7 +18,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=db
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=bolcsessegbarka
 DB_USERNAME=laravel
 DB_PASSWORD=knY5FKFFCjNBRqvgD3AZb72NmfrWKGv3
 DB_ROOT_PASSWORD=SbEgkN5akNFZ48PrwCBbxdHZQ8BX5cHs-AeGAeUMFXs2CUsGTySyduBzTGb2wzthQ
