--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "primeicons": "^7.0.0",
-    "primevue": "^3.50.0"
+    "primevue": "^3.50.0",
+    "quill": "^1.3.7"
   }
 }
