--- a/tests/BolcsessegBarkaSeleniumTests/BolcsessegBarkaSeleniumTests.csproj
+++ b/tests/BolcsessegBarkaSeleniumTests/BolcsessegBarkaSeleniumTests.csproj
@@ -11,11 +11,17 @@
 
     <ItemGroup>
         <PackageReference Include="DotNetSeleniumExtras.WaitHelpers" Version="3.11.0" />
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0"/>
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
         <PackageReference Include="MSTest.TestAdapter" Version="3.0.4"/>
         <PackageReference Include="MSTest.TestFramework" Version="3.0.4"/>
         <PackageReference Include="coverlet.collector" Version="6.0.0"/>
         <PackageReference Include="Selenium.WebDriver" Version="4.19.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Update="Images\logo.png">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
