--- a/backend/composer.json
+++ b/backend/composer.json
@@ -11,7 +11,8 @@
         "laravel/sanctum": "^3.3",
         "laravel/telescope": "^5.0",
         "laravel/tinker": "^2.8",
-        "nesbot/carbon": "^2.72"
+        "nesbot/carbon": "^2.72",
+        "staudenmeir/belongs-to-through": "^2.5"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
