--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -2,6 +2,8 @@ events{
     worker_connections 4096;
 }
 http{
+    client_max_body_size 100M;
+
     map $http_upgrade $connection_upgrade{
         default upgrade;
         '' close;
